# aiogram-weather-bot

./: .env.dev.example  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  TODO.txt  alembic.ini  bot.py  docker-compose-dev.yml  docker-compose.yml  mypy_run.sh  pyproject.toml  pytest.ini  states.py
api_requests/: city_validator.py  request.py  weather_request.py
bot/: main.py  start.sh
bot/api_requests/: city_validator.py  exceptions.py  weather_request.py
bot/cache/: redis_config.py
bot/core/: config.py  setup_logger.py
bot/database/: database.py  exceptions.py  models.py  orm.py
bot/dialogs/: exceptions.py
bot/filters/: is_admin.py
bot/handlers/: __init__.py  admin.py  user.py
bot/lexicon/: __init__.py  lexicon.py
bot/schemas/: __init__.py  weather_data.py  weather_report.py
bot/services/: set_commands.py
bot/settings/: config.py  setup_logger.py
bot/states/: __init__.py
bot/tests/: conftest.py  mocked_aiogram.py  test_basic_commands.py
bot/utils/: cache.py  info_from_weather_code.py  weather_reports.py  weather_utils.py
callbacks/: __init__.py  callback_factory.py
database/: database.py  models.py  orm.py
database/migrations/: env.py
dialogs/: __init__.py
dialogs/admin_menu/: __init__.py  dialogs.py
dialogs/common/: handlers.py
dialogs/list_of_users/: dialogs.py  getters.py  handlers.py
dialogs/my_city_weather/: __init__.py  dialogs.py  getters.py
dialogs/other_city_weather/: __init__.py  dialogs.py  getters.py  handlers.py
dialogs/random_city_weather/: dialogs.py  getters.py  handlers.py
dialogs/set_city/: __init__.py  (+2 more)
filters/: is_admin.py
handlers/: __init__.py  admin.py  bot_main_menu.py  user.py
lexicon/: lexicon.py
services/: set_commands.py
settings/: config.py
states/: other_city_weather.py
states_old/: __init__.py  user_city_weather.py
tests/: conftest.py  pytest.ini  test_basic_commands.py
utils/: info_from_weather_code.py  weather_utils.py
(+57 files in other folders)
