[tool.poetry]
name = "weatherbot"
version = "0.1.0"
description = ""
authors = ["csmqbusy"]
readme = "README.md"

[tool.mypy]
ignore_missing_imports = true
no_implicit_reexport = false
strict = true
exclude = ['bot/tests']

[tool.ruff]
line-length = 79

[tool.poetry.dependencies]
python = "^3.13"
asyncpg = "^0.30.0"
aiofiles = "24.1.0"
aiogram = "3.13.1"
aiogram-dialog = "2.2.0"
aiohappyeyeballs = "2.4.3"
aiohttp = "3.10.8"
aiosignal = "1.3.1"
alembic = "1.13.3"
annotated-types = "0.7.0"
async-timeout = "4.0.3"
attrs = "24.2.0"
cachetools = "5.5.0"
certifi = "2024.8.30"
chardet = "3.0.4"
charset-normalizer = "3.3.2"
click = "8.1.7"
country-converter = "1.2"
countryflag = "0.1.2b3"
emoji-country-flag = "2.0.1"
frozenlist = "1.4.1"
greenlet = "3.1.1"
h11 = "0.9.0"
h2 = "3.2.0"
hpack = "3.0.0"
hstspreload = "2024.10.1"
httpcore = "0.9.1"
httpx = "0.13.3"
hyperframe = "5.2.0"
idna = "2.10"
iniconfig = "2.0.0"
jinja2 = "3.1.4"
libretranslatepy = "2.1.1"
lxml = "5.3.0"
magic-filter = "1.0.12"
mako = "1.3.5"
markupsafe = "2.1.5"
multidict = "6.1.0"
mypy-extensions = "1.0.0"
numpy = "2.1.2"
packaging = "24.1"
pandas = "2.2.3"
pathspec = "0.12.1"
platformdirs = "4.3.6"
pluggy = "1.5.0"
psycopg = "3.2.2"
psycopg-binary = "3.2.2"
pydantic = "2.9.2"
pydantic-settings = "2.5.2"
pydantic-core = "2.23.4"
python-dateutil = "2.9.0.post0"
python-dotenv = "1.0.1"
pytz = "2024.2"
rcoc = "1.1.16"
requests = "2.32.3"
rfc3986 = "1.5.0"
six = "1.16.0"
sniffio = "1.3.1"
sqlalchemy = "2.0.35"
translate = "3.6.1"
typing-extensions = "4.12.2"
tzdata = "2024.2"
urllib3 = "2.2.3"
yarl = "1.13.1"
setuptools = "^75.3.0"
structlog = "^24.4.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.13.0"
ruff = "^0.8.0"
black = "^24.10.0"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
